// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rm-env command rm-env fails if env is set 1`] = `
"The following errors occurred:
  [2mMissing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;

exports[`rm-env command rm-env fails if env,org is set 1`] = `
"The following error occurred:
  [2mMissing required flag repositories[22m
See more help with --help"
`;

exports[`rm-env command rm-env fails if no flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag environments[22m
[2m  Missing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;
